fix: fix api.yaml
